# athena-code

./: .gitattributes
.github/workflows/: main.yml
description/urdf/: athena_arm.urdf.xacro
src/description/config/: athena_drive_sim_controllers.yaml
src/description/models/marker0/: model.config
src/description/urdf/: athena_drive.urdf.xacro  athena_drive_description.urdf.xacro  camera.xacro  depth_camera.xacro  ground_truth_odom.xacro  imu.xacro
src/description/urdf/athena_drive/: athena_drive_macro.ros2_control.xacro
src/description/worlds/: empty.sdf
src/msgs/: CMakeLists.txt  package.xml
src/msgs/action/: NavigateToGPS.action
src/msgs/msg/: BB.msg
src/simulation/: CMakeLists.txt
src/simulation/launch/: bridge.launch.py  bringup.launch.py  control.launch.py  ground_truth_tf.launch.py  spawn.launch.py
src/subsystems/navigation/aruco_detection/aruco_detection/: aruco_node.py  correction_node.py
src/subsystems/navigation/athena_map/: CMakeLists.txt  package.xml
src/subsystems/navigation/athena_map/config/: dem_costmap.yaml
src/subsystems/navigation/athena_map/launch/: dem_costmap.launch.py
src/subsystems/navigation/athena_map/maps/: north_site800m.tif
src/subsystems/navigation/athena_map/src/: map_node.cpp
src/subsystems/navigation/athena_planner/: CMakeLists.txt  package.xml
src/subsystems/navigation/athena_planner/config/: nav2_params.yaml
src/subsystems/navigation/athena_planner/launch/: nav2.launch.py  nav2_nodes.launch.py  navigation.launch.py
src/subsystems/navigation/gps_goal/: package.xml  setup.py
(+7 files in other folders)
